--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.1.0
+  firebase_auth: ^3.0.2
+  firebase_core: ^1.5.0
 
 dev_dependencies:
   flutter_test:
