--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   animated_splash_screen: ^1.1.0
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
+  cloud_firestore: ^2.5.0
 
 dev_dependencies:
   flutter_test:
