--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
   cloud_firestore: ^2.5.0
-  image_picker: ^0.8.3+3
+#  image_picker: ^0.8.3+3
 
 
 dev_dependencies:
