--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -32,7 +32,11 @@ dependencies:
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
   cloud_firestore: ^2.5.0
-  image_picker: ^0.7.4
+  google_sign_in: ^5.0.7
+  font_awesome_flutter: ^9.0.0
+  provider: ^5.0.0
+  pinput: ^1.2.0
+
 
 
 
