IOS circularprogress indicator

--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
   cloud_firestore: ^2.5.0
+  geolocator: ^7.6.0
+  address_search_field: ^4.0.1
   google_sign_in: ^5.0.7
   font_awesome_flutter: ^9.0.0
   provider: ^5.0.0
