--- a/shalong/android/app/src/main/AndroidManifest.xml
+++ b/shalong/android/app/src/main/AndroidManifest.xml
@@ -40,5 +40,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-    </application>
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyDSec8XcmIF9d9tZWIqDFAD6GrSI0EDHCo"/>
+   </application>
 </manifest>
