--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  country_code_picker: ^2.0.2
   animated_splash_screen: ^1.1.0
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
