Created Account Info Screen

--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -61,8 +61,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - images/
+#  assets:
+#    - assets/images/user_icon.png
+
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
