--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   apple_maps_flutter: ^1.0.1
   pull_to_refresh: ^2.0.0
   avatar_view: ^1.0.1
+  flutter_rating_bar: ^4.0.0
+
+
   
 
 
