--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -70,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/tick.flr.png
+    - images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
