--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   avatar_view: ^1.0.1
   flutter_rating_bar: ^4.0.0
   bottom_navy_bar: ^6.0.0
-#  webview_flutter: ^2.1.1
+  webview_flutter: ^2.1.1
+  flutter_html: ^2.1.4
 
   
 
@@ -90,10 +91,10 @@ flutter:
       fonts:
         - asset: fonts/SourceCodePro-Regular.ttf
           weight: 400
-    - family: Trajan Pro
-      fonts:
-        - asset: fonts/TrajanPro.ttf
-        - asset: fonts/TrajanPro_Bold.ttf
-          weight: 700
+#    - family: Trajan Pro
+#      fonts:
+#        - asset: fonts/TrajanPro.ttf
+#        - asset: fonts/TrajanPro_Bold.ttf
+#          weight: 700
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
