--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -50,8 +50,10 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   bottom_navy_bar: ^6.0.0
   flutter_html: ^2.1.4
+  flip_card: ^0.5.0
+  carousel_slider: ^4.0.0
 
-  
+
 
 
 dev_dependencies:
