--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -88,10 +88,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: SourceCodePro
+    - family: Bunya-Regular_PERSONAL
       fonts:
-        - asset: fonts/SourceCodePro-Regular.ttf
-          weight: 400
+        - asset: fonts/Bunya-Regular_PERSONAL.ttf
+#          weight: 400
 #    - family: Trajan Pro
 #      fonts:
 #        - asset: fonts/TrajanPro.ttf
