--- a/shalong/android/app/src/main/AndroidManifest.xml
+++ b/shalong/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yaash.shalong">
+<!--    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>-->
 <!--    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>-->
 <!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>-->
 <!--    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />-->
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.DIAL" />
+            <data android:scheme="tel" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.SEND" />
+            <data android:mimeType="*/*" />
+        </intent>
+    </queries>
    <application
         android:label="shalong"
         android:icon="@drawable/ic_launcher">
@@ -42,6 +58,5 @@
             android:value="2" />
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="abc"/>
-
    </application>
 </manifest>
