--- a/shalong/android/app/src/main/AndroidManifest.xml
+++ b/shalong/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:icon="@drawable/ic_launcher">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
