--- a/shalong/pubspec.yaml
+++ b/shalong/pubspec.yaml
@@ -32,9 +32,9 @@ dependencies:
   firebase_auth: ^3.1.1
   firebase_core: ^1.6.0
   cloud_firestore: ^2.5.3
+  provider:
   google_sign_in:
   font_awesome_flutter: ^9.0.0
-  provider: ^5.0.0
   http:
   email_validator: ^2.0.1
   pull_to_refresh: ^2.0.0
@@ -44,7 +44,8 @@ dependencies:
   carousel_slider: ^4.0.0
   in_app_review: ^2.0.3
   url_launcher: ^6.0.12
-
+  liquid_swipe: ^2.1.1
+  pinput: ^1.2.1
 
 
 
@@ -84,7 +85,22 @@ flutter:
     - family: Bunya-Regular_PERSONAL
       fonts:
         - asset: fonts/Bunya-Regular_PERSONAL.ttf
-#          weight: 400
+#    - family: Poppins
+#      fonts:
+##        - asset: assets/fonts/Poppins-Regular.ttf
+##          weight: 500
+#        - asset: assets/fonts/Poppins-SemiBold.ttf
+#          weight: 600
+#        - asset: assets/fonts/Poppins-Bold.ttf
+#          weight: 700
+#    - family: OpenSans
+#      fonts:
+##        - asset: assets/fonts/OpenSans-Regular.ttf
+##          weight: 500
+#        - asset: assets/fonts/OpenSans-SemiBold.ttf
+#          weight: 600
+#        - asset: assets/fonts/OpenSans-Bold.ttf
+#          weight: 700
 #    - family: Trajan Pro
 #      fonts:
 #        - asset: fonts/TrajanPro.ttf
